--- a/simulations/DaraTest/omnetpp.ini
+++ b/simulations/DaraTest/omnetpp.ini
@@ -29,7 +29,7 @@ sim-time-limit=720s
 
 #application
 **.host[*].appType = "BurstTraffic"
-**.host[*].app.burstInterval = uniform(20ms,50ms)
+**.host[*].app.burstInterval = uniform(20ms,40ms)
 **.host[*].app.pksPerBurst = 1
 **.host[*].app.pkLength = 4096b
 
@@ -37,13 +37,18 @@ sim-time-limit=720s
 **.host[*].mac.communicationRange = 300000m
 **.host[*].mac.txRate=100000000bps
 **.host[*].mac.slotLength = 0.1ms
-**.host[*].mac.slotNum = 60
+**.host[*].mac.slotNum = 32
 
 **.ap.macType = "DaraApMac"
 **.ap.mac.communicationRange = 300000m
 **.ap.mac.slotLength = 0.1ms
-**.ap.mac.slotNum = 60
-**.ap.mac.ackSlotNum = 30
+**.ap.mac.slotNum = 32
+**.ap.mac.ackSlotNum = 20
 
+[Config DaraHost]
 **.host[*].macType = "DaraHostMac"
-**.host[*].mac.ackSlotNum = 30
+**.host[*].mac.ackSlotNum = 20
+
+[Config IrsaHost]
+**.host[*].macType = "IrsaHostMac"
+**.host[*].mac.ackSlotNum = 20
