--- a/simulations/DaraTest/omnetpp.ini
+++ b/simulations/DaraTest/omnetpp.ini
@@ -1,6 +1,6 @@
 [General]
 network = DaraTest
-sim-time-limit=720s
+sim-time-limit=12000s
 
 **.constraintAreaMaxX = 600000m 
 **.constraintAreaMaxY = 600000m 
@@ -16,7 +16,7 @@ sim-time-limit=720s
 **.ap.mobility.initialY = 300000m #could be modified
 **.ap.mobility.initialZ = 0m
 
-**.hostNum = 70
+**.hostNum = 10
 #host
 
 **.host[*].mobilityType = "ThreeWayRandomMobility"
@@ -48,7 +48,9 @@ sim-time-limit=720s
 [Config DaraHost]
 **.host[*].macType = "DaraHostMac"
 **.host[*].mac.ackSlotNum = 20
+**.host[*].mac.repetitionRate = 2
 
 [Config IrsaHost]
 **.host[*].macType = "IrsaHostMac"
 **.host[*].mac.ackSlotNum = 20
+**.host[*].mac.repetitionRate = 2
