--- a/simulations/MobilityTest/omnetpp.ini
+++ b/simulations/MobilityTest/omnetpp.ini
@@ -1,7 +1,7 @@
 [General]
 network = MobilityTest
 
-sim-time-limit=7200s
+#sim-time-limit=7200s
 
 **.constraintAreaMaxX = 600000m
 **.constraintAreaMaxY = 600000m
@@ -10,7 +10,7 @@ sim-time-limit=7200s
 **.constraintAreaMinY = 0m
 **.constraintAreaMinZ = 0m
 
-**.hostNum = 3
+**.hostNum = 10
 
 [Config ThreeWayRandomMobility]
 **.host[*].mobilityType = "ThreeWayRandomMobility"
