--- a/simulations/DaraTest/.tkenvrc
+++ b/simulations/DaraTest/.tkenvrc
@@ -1,4 +1,4 @@
 # Partial OMNeT++/Tkenv config file -- see $HOME/.tkenvrc as well
-config default-configname	{IrsaHost}
+config default-configname	{DaraHost}
 config default-runnumber	{0}
 
