--- a/simulations/DaraTest/omnetpp.ini
+++ b/simulations/DaraTest/omnetpp.ini
@@ -1,6 +1,8 @@
 [General]
 network = DaraTest
 sim-time-limit=720s
+repeat = 20
+seed-set = ${runnumber}
 
 **.constraintAreaMaxX = 600000m 
 **.constraintAreaMaxY = 600000m 
@@ -16,7 +18,7 @@ sim-time-limit=720s
 **.ap.mobility.initialY = 300000m #could be modified
 **.ap.mobility.initialZ = 0m
 
-**.hostNum = 30
+**.hostNum = 50
 #host
 
 **.host[*].mobilityType = "ThreeWayRandomMobility"
@@ -29,7 +31,7 @@ sim-time-limit=720s
 
 #application
 **.host[*].appType = "BurstTraffic"
-**.host[*].app.burstInterval = uniform(1ms,20ms)
+**.host[*].app.burstInterval = uniform(10ms,50ms)
 **.host[*].app.pksPerBurst = 1
 **.host[*].app.pkLength = 4096b
 
@@ -37,20 +39,62 @@ sim-time-limit=720s
 **.host[*].mac.communicationRange = 300000m
 **.host[*].mac.txRate=50000000bps
 **.host[*].mac.slotLength = 0.1ms
-**.host[*].mac.slotNum = 30
+**.host[*].mac.slotNum = 50
 
 **.ap.macType = "DaraApMac"
 **.ap.mac.communicationRange = 300000m
 **.ap.mac.slotLength = 0.1ms
-**.ap.mac.slotNum = 30
-**.ap.mac.ackSlotNum = 20
+**.ap.mac.slotNum = 50
+**.ap.mac.ackSlotNum = 15
 
 [Config DaraHost]
 **.host[*].macType = "DaraHostMac"
-**.host[*].mac.ackSlotNum = 20
+**.host[*].mac.ackSlotNum = 15
 **.host[*].mac.repetitionRate = 1
 
 [Config IrsaHost]
 **.host[*].macType = "IrsaHostMac"
-**.host[*].mac.ackSlotNum = 20
+**.host[*].mac.ackSlotNum = 15
 **.host[*].mac.repetitionRate = 1
+
+[Config Dara-slotNum-hostNum30-rate1]
+**.host[*].macType = "DaraHostMac"
+**.hostNum = 30
+**.host[*].mac.ackSlotNum = 15
+**.host[*].mac.repetitionRate = 1
+**.mac.slotNum = ${25,27,30,35,40,50,60,70,80,90}
+
+[Config Dara-slotNum-hostNum50-rate1]
+**.host[*].macType = "DaraHostMac"
+**.hostNum = 50
+**.host[*].mac.ackSlotNum = 15
+**.host[*].mac.repetitionRate = 1
+**.mac.slotNum = ${25,27,30,35,40,50,60,70,80,90}
+
+[Config Dara-slotNum-hostNum70-rate1]
+**.host[*].macType = "DaraHostMac"
+**.hostNum = 70
+**.host[*].mac.ackSlotNum = 15
+**.host[*].mac.repetitionRate = 1
+**.mac.slotNum = ${25,27,30,35,40,50,60,70,80,90}
+
+[Config Dara-slotNum-hostNum30-rate2]
+**.host[*].macType = "DaraHostMac"
+**.hostNum = 30
+**.host[*].mac.ackSlotNum = 15
+**.host[*].mac.repetitionRate = 2
+**.mac.slotNum = ${25,27,30,35,40,50,60,70,80,90}
+
+[Config Dara-slotNum-hostNum50-rate2]
+**.host[*].macType = "DaraHostMac"
+**.hostNum = 50
+**.host[*].mac.ackSlotNum = 15
+**.host[*].mac.repetitionRate = 2
+**.mac.slotNum = ${25,27,30,35,40,50,60,70,80,90}
+
+[Config Dara-slotNum-hostNum70-rate2]
+**.host[*].macType = "DaraHostMac"
+**.hostNum = 70
+**.host[*].mac.ackSlotNum = 15
+**.host[*].mac.repetitionRate = 2
+**.mac.slotNum = ${25,27,30,35,40,50,60,70,80,90}
